--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header{
 header .container{
     width: 80px;
     height: 80px;
-    padding: 5px;
+    
     background: #FEDF32;
     border-radius: 100px;
     display: flex;
@@ -27,9 +27,10 @@ header .container{
 
 }
 
-img{
+.container img{
 
-    width:100%;
+    width:85%;
+   
    
 }
 main{
