--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,15 @@ header .container{
 }
 
 .container img{
-
+    display:inline-block;
     width:85%;
    
+   
+}
+
+.container-img{
+width: 50%;
+   height: 50%;
    
 }
 main{
@@ -72,14 +78,22 @@ img{
 }
 .container_main{
    
-    margin: 100px;
+
     width: 100%;
+    height: 500px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    
 
 }
 
 h2{
+    display:inline-block;
     font-size: 30px;
     margin-bottom: 30px;
+    width: 50%;
+    height: 50%;
 }
 
 footer p {
